--- a/src/Trace/composer.json
+++ b/src/Trace/composer.json
@@ -6,6 +6,11 @@
     "require": {
         "google/cloud-core": "*"
     },
+    "suggest": {
+        "cache/apcu-adapter": "Enable QpsSampler to use apcu cache.",
+        "cache/apc-adapter": "Enable QpsSampler to use apc cache.",
+        "cache/memcached-adapter": "Enable QpsSampler to use memcached cache."
+    },
     "extra": {
         "component": {
             "id": "cloud-trace",
