--- a/src/Trace/composer.json
+++ b/src/Trace/composer.json
@@ -24,5 +24,8 @@
         "psr-4": {
             "Google\\Cloud\\Trace\\": ""
         }
+    },
+    "archive": {
+        "exclude": ["/ext"]
     }
 }
